# icf-recognizer

./: .gitignore  README.md
feature/: stub.py  vector.py
misc/: constants.py  gradient.py  misc.py
src/: CMakeLists.txt  histogram.cpp
src/gradient-orientation/: ex_main.cpp  new-orien.cpp  orien.cpp  orientation.cpp  orientation.hpp
src/icf_python/: foo.py  gen_data.py  gen_stub.py  generate_negative.py  generate_stub.py  single.py  test1.py  trial.py
src/icf_python/feature/: stub.py  vector.py
src/icf_python/misc/: misc.py
src/icf_python/toolbox/native/: binarize.py  gen_data.py  gen_single.py  gen_stub.py  generate_negative.py
src/icf_python/util/: __init__.py  constants.py  features.py  gradient.py  single.py
src/python/: util.py
src/python/util/: constants.py  features.py  gradient.py
toolbox/native/: binarize.py  gen_data.py  gen_single.py
toolbox/spark/: binarized-100  spark.conf.sh  vector-100  wordcount.py
